<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/math_operation"
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:textColor="@color/secondary_action"
        android:gravity="end"
        android:ellipsize="start"
        android:textSize="40sp"
        android:singleLine="true"
        />
    <EditText
        android:id="@+id/result_text"
        android:layout_width="match_parent"
        android:layout_height="100sp"
        android:textColor="@color/secondary_action"
        android:gravity="end"
        android:ellipsize="end"
        android:textSize="30sp"
        android:singleLine="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                style="@style/ActionButton"
                android:id="@+id/btnCE"
                android:text="@string/ce">
            </TextView>

            <TextView
                style="@style/ActionButton"
                android:id="@+id/skobka1_btn"
                android:text="@string/_skobka1">
            </TextView>

            <TextView
                style="@style/ActionButton"
                android:id="@+id/skobka2_btn"
                android:text="@string/_skobka2">
            </TextView>

            <TextView
                style="@style/ActionButton"
                android:id="@+id/devision_btn"
                android:text="@string/_razdelit">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_7"
                android:text="@string/_7">
            </TextView>

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_8"
                android:text="@string/_8">
            </TextView>

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_9"
                android:text="@string/_9">
            </TextView>

            <TextView
                style="@style/ActionButton"
                android:id="@+id/mult_btn"
                android:text="@string/_mult">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_4"
                android:text="@string/_4">
            </TextView>

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_5"
                android:text="@string/_5">
            </TextView>

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_6"
                android:text="@string/_6">
            </TextView>

            <TextView
                style="@style/ActionButton"
                android:id="@+id/plus_btn"
                android:text="@string/_plus">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_1"
                android:text="@string/_1">
            </TextView>

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_2"
                android:text="@string/_2">
            </TextView>

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_3"
                android:text="@string/_3">
            </TextView>

            <TextView
                style="@style/ActionButton"
                android:id="@+id/minus_btn"
                android:text="@string/_minus">
            </TextView>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                style="@style/ActionButton"
                android:id="@+id/point_btn"
                android:text="@string/_tochka">
            </TextView>

            <TextView
                style="@style/NumberButton"
                android:id="@+id/btn_0"
                android:text="@string/_0">
            </TextView>

            <TextView
                style="@style/ActionButton"
                android:id="@+id/clear_btn"
                android:text="@string/c">
            </TextView>

            <TextView
                style="@style/ActionButton"
                android:id="@+id/ravno_btn"
                android:text="@string/_ravno">
            </TextView>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>